--- a/index.ipynb
+++ b/index.ipynb
@@ -57,19 +57,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Fork & Fig', 'price': 2, 'is_closed': False, 'review_count': 610},\n",
+       "[{'name': 'Fork & Fig',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 610},\n",
        " {'name': 'Salt And Board',\n",
-       "  'price': 2,\n",
+       "  'price': '$$',\n",
        "  'is_closed': False,\n",
        "  'review_count': 11},\n",
        " {'name': 'Frontier Restaurant',\n",
-       "  'price': 1,\n",
+       "  'price': '$',\n",
        "  'is_closed': False,\n",
        "  'review_count': 1373},\n",
        " {'name': 'Nexus Brewery',\n",
@@ -94,7 +97,7 @@
        "  'review_count': 20}]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
