Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -249,7 +249,7 @@
    "source": [
     "def format_restaurant(restaurant):\n",
     "    p = restaurant\n",
-    "    p['price'] = len(p['price'])\n",
+    "    p['price'] = len(restaurant['price'])\n",
     "    return p"
    ]
   },
