--- a/index.ipynb
+++ b/index.ipynb
@@ -248,7 +248,7 @@
    "outputs": [],
    "source": [
     "def format_restaurant(restaurant):\n",
-    "    return len(restaurant['price'])"
+    "    return ldict(restaurant['price'])"
    ]
   },
   {
