--- a/index.ipynb
+++ b/index.ipynb
@@ -243,12 +243,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def format_restaurant(restaurant):\n",
-    "    formatrest = c"
+    "    formatrest = restaurant.copy()"
    ]
   },
   {
