Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -248,7 +248,8 @@
    "outputs": [],
    "source": [
     "def format_restaurant(restaurant):\n",
-    "    formatrest = restaurant.copy()"
+    "    formatrest = restaurant.copy()\n",
+    "    "
    ]
   },
   {
